--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>Luke Su</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfr0j+BmwXdxFgVk/Kvc=" crossorigin="anonymous" />
-    
+        <link rel="stylesheet" href="style.css">
+        
     </head>
     <body>
         <header>
