--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfr0j+BmwXdxFgVk/Kvc=" crossorigin="anonymous" />
         <link rel="stylesheet" href="style.css">
-        
+
     </head>
     <body>
         <header>
             <div class="logo">
                 <img src="Image/Logo.png" alt="Logo" />
             </div>
+            <button class="nav-toggle" aria-label="toggle navigation">
+                <span class="hamburger"></span>
+            </button>
+            <nav class="nav">
+                <ul class="nav__list>
+                    <li class="nav-item"><a href="#" class="nav-link">Work</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">About </a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                    </ul>
+            </nav> 
+            </header>
     </body>
 </html>
