--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <span class="hamburger"></span>
             </button>
             <nav class="nav">
-                <ul class="nav__list>
+                <ul class="nav__list">
                     <li class="nav-item"><a href="#" class="nav-link">Work</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">About </a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-                    </ul>
+                </ul>
             </nav> 
-            </header>
+        </header>
     </body>
 </html>
