--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <title>Luke Su</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfr0j+BmwXdxFgVk/Kvc=" crossorigin="anonymous" />
+        
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+        
         <link rel="stylesheet" href="css/style.css">
 
     </head>
@@ -19,11 +24,101 @@
             </button>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav-item"><a href="#" class="nav-link">Work</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">About </a></li>
+                    <li class="nav-item"><a href="#home" class="nav-link">Work</a></li>
+                    <li class="nav-item"><a href="#about" class="nav-link">About </a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                 </ul>
             </nav> 
         </header>
+
+        <!-- Intro-->
+        <section class="intro" id="home">
+            <h1 class="section__title section__title--intro"
+                Hi, I am <strong>Luke</strong>
+            </h1>
+            <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+            <img src="Images/Home.jpg" class="img-main" alt="image of adelaide">
+        </section>
+
+        <!-- Services-->
+        <section class="my-services" id="services">
+            <h2 class="section__title section__title--services">What I do</h2>
+            <div class="services">
+                <div class="services">
+                    <h3>Web Design</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
+                        Morbi dictum diam tortor, nec gravida urna interdum porta. Maecenas a tincidunt diam, a scelerisque diam. 
+                        Donec suscipit accumsan sem, eu laoreet neque eleifend sed. Nunc lacus velit, molestie vitae hendrerit sed, maximus at erat. 
+                        Vivamus feugiat pretium justo laoreet convallis. Quisque congue non nunc id porta. Quisque libero ante, consectetur.</p>
+                </div>
+                <div class="services">
+                    <h3>Videography</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
+                        Morbi dictum diam tortor, nec gravida urna interdum porta. Maecenas a tincidunt diam, a scelerisque diam. 
+                        Donec suscipit accumsan sem, eu laoreet neque eleifend sed. Nunc lacus velit, molestie vitae hendrerit sed, maximus at erat. 
+                        Vivamus feugiat pretium justo laoreet convallis. Quisque congue non nunc id porta. Quisque libero ante, consectetur.</p>
+                </div>
+                <div class="services">
+                    <h3>Photography</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
+                        Morbi dictum diam tortor, nec gravida urna interdum porta. Maecenas a tincidunt diam, a scelerisque diam. 
+                        Donec suscipit accumsan sem, eu laoreet neque eleifend sed. Nunc lacus velit, molestie vitae hendrerit sed, maximus at erat. 
+                        Vivamus feugiat pretium justo laoreet convallis. Quisque congue non nunc id porta. Quisque libero ante, consectetur.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- About Me -->
+        <section class="about-me" id="about">
+
+            <h2 class="section__title section__title-about">Who I am</h2>
+            <p class="section__subtitle section__subtitle-about"></p>
+
+            <div class="about-me__body">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
+                    Morbi dictum diam tortor, nec gravida urna interdum porta. Maecenas a tincidunt diam, a scelerisque diam.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
+                Morbi dictum diam tortor, nec gravida urna interdum porta. Maecenas a tincidunt diam, a scelerisque diam.</p>
+            </div>
+        </section>
+
+        <!-- My Work-->
+        <section class="my-work" id="work">
+            <h2 class="section__title">My Work</h2>
+            <p class="section__subtitle"></p>
+
+            <div class="portfoli">
+                <a href="a" class="portfolio__item">
+                    <img src="">
+                </a>
+            </div>
+
+            <div class="portfoli">
+                <a href="a" class="portfolio__item">
+                    <img src="">
+                </a>
+            </div>
+
+            <div class="portfoli">
+                <a href="a" class="portfolio__item">
+                    <img src="">
+                </a>
+            </div>
+
+            <div class="portfoli">
+                <a href="a" class="portfolio__item">
+                    <img src="">
+                </a>
+            </div>
+        </section>
+
+        <footer>
+            <a href=""mailto:lukesu.production@gmail.com" class="footer-link">lukesu.production@gmail.com</a>
+            <ul class="social-list">
+                <li class="social-list__item"><a class="social-list__link">Github</a></li>
+                <li class="social-list__item"><a class="social-list__link">Linkedin</a></li>
+                <li class="social-list__item"><a class="social-list__link">Instagram</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
