--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
         
         <link rel="stylesheet" href="css/style.css">
-
     </head>
+
     <body>
         <header>
             <div class="logo">
@@ -24,20 +24,20 @@
             </button>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav-item"><a href="#home" class="nav-link">Work</a></li>
-                    <li class="nav-item"><a href="#about" class="nav-link">About </a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="#services" class="nav__link">My Services </a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">About me</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
                 </ul>
             </nav> 
         </header>
 
         <!-- Intro-->
         <section class="intro" id="home">
-            <h1 class="section__title section__title--intro"
-                Hi, I am <strong>Luke</strong>
+            <h1 class="section__title section__title--intro"> Hi, I am <strong>Luke</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-            <img src="Images/Home.jpg" class="img-main" alt="image of adelaide">
+            <img src="Images/Home.jpg" class="intro__img" alt="image of adelaide">
         </section>
 
         <!-- Services-->
@@ -66,13 +66,15 @@
                         Vivamus feugiat pretium justo laoreet convallis. Quisque congue non nunc id porta. Quisque libero ante, consectetur.</p>
                 </div>
             </div>
+
+            <a href="#work" class="btn">My Work</a>
         </section>
 
         <!-- About Me -->
         <section class="about-me" id="about">
 
-            <h2 class="section__title section__title-about">Who I am</h2>
-            <p class="section__subtitle section__subtitle-about"></p>
+            <h2 class="section__title section__title--about">Who I am</h2>
+            <p class="section__subtitle section__subtitle--about"></p>
 
             <div class="about-me__body">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
@@ -80,6 +82,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
                 Morbi dictum diam tortor, nec gravida urna interdum porta. Maecenas a tincidunt diam, a scelerisque diam.</p>
             </div>
+            <img src="images/Test1.png" alt="testing photo">
         </section>
 
         <!-- My Work-->
