--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
         <title>Luke Su</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfr0j+BmwXdxFgVk/Kvc=" crossorigin="anonymous" />
-        
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
-        
         <link rel="stylesheet" href="css/style.css">
     </head>
 
@@ -51,7 +49,7 @@
                         Donec suscipit accumsan sem, eu laoreet neque eleifend sed. Nunc lacus velit, molestie vitae hendrerit sed, maximus at erat. 
                         Vivamus feugiat pretium justo laoreet convallis. Quisque congue non nunc id porta. Quisque libero ante, consectetur.</p>
                 </div>
-                <div class="services">
+              <div class="services">
                     <h3>Videography</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
                         Morbi dictum diam tortor, nec gravida urna interdum porta. Maecenas a tincidunt diam, a scelerisque diam. 
@@ -74,7 +72,7 @@
         <section class="about-me" id="about">
 
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about"></p>
+            <p class="section__subtitle section__subtitle--about">Designer , Developer & Videographer based out of Adelaide</p>
 
             <div class="about-me__body">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
@@ -82,7 +80,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
                 Morbi dictum diam tortor, nec gravida urna interdum porta. Maecenas a tincidunt diam, a scelerisque diam.</p>
             </div>
-            <img src="images/Test1.png" alt="testing photo">
+            <img src="images/" alt="testing photo">
         </section>
 
         <!-- My Work-->
@@ -116,7 +114,7 @@
         </section>
 
         <footer>
-            <a href=""mailto:lukesu.production@gmail.com" class="footer-link">lukesu.production@gmail.com</a>
+            <a href="mailto:lukesu.production@gmail.com" class="footer-link">lukesu.production@gmail.com</a>
             <ul class="social-list">
                 <li class="social-list__item"><a class="social-list__link">Github</a></li>
                 <li class="social-list__item"><a class="social-list__link">Linkedin</a></li>
