--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!-- Intro-->
         <section class="intro" id="home">
-            <h1 class="section__title section__title--intro"> Hi, I am <strong>Luke</strong>
+            <h1 class="section__title section__title--intro">Hi, I am <strong>Luke Su</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">front-end dev</p>
             <img src="Images/Home.jpg" class="intro__img" alt="image of adelaide">
@@ -42,21 +42,21 @@
         <section class="my-services" id="services">
             <h2 class="section__title section__title--services">What I do</h2>
             <div class="services">
-                <div class="services">
+                <div class="service">
                     <h3>Web Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
                         Morbi dictum diam tortor, nec gravida urna interdum porta. Maecenas a tincidunt diam, a scelerisque diam. 
                         Donec suscipit accumsan sem, eu laoreet neque eleifend sed. Nunc lacus velit, molestie vitae hendrerit sed, maximus at erat. 
                         Vivamus feugiat pretium justo laoreet convallis. Quisque congue non nunc id porta. Quisque libero ante, consectetur.</p>
                 </div>
-              <div class="services">
+              <div class="service">
                     <h3>Videography</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
                         Morbi dictum diam tortor, nec gravida urna interdum porta. Maecenas a tincidunt diam, a scelerisque diam. 
                         Donec suscipit accumsan sem, eu laoreet neque eleifend sed. Nunc lacus velit, molestie vitae hendrerit sed, maximus at erat. 
                         Vivamus feugiat pretium justo laoreet convallis. Quisque congue non nunc id porta. Quisque libero ante, consectetur.</p>
                 </div>
-                <div class="services">
+                <div class="service">
                     <h3>Photography</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
                         Morbi dictum diam tortor, nec gravida urna interdum porta. Maecenas a tincidunt diam, a scelerisque diam. 
@@ -80,7 +80,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis turpis lacinia, semper neque et, tempor nulla. 
                 Morbi dictum diam tortor, nec gravida urna interdum porta. Maecenas a tincidunt diam, a scelerisque diam.</p>
             </div>
-            <img src="images/" alt="testing photo">
+            <img src="Images/me.png" alt="testing photo">
         </section>
 
         <!-- My Work-->
@@ -88,27 +88,30 @@
             <h2 class="section__title">My Work</h2>
             <p class="section__subtitle"></p>
 
-            <div class="portfoli">
-                <a href="a" class="portfolio__item">
-                    <img src="">
+            <div class="portfolio">
+                <a href="..." class="portfolio__item">
+                    <img src="" alt="">
                 </a>
             </div>
 
             <div class="portfoli">
-                <a href="a" class="portfolio__item">
-                    <img src="">
+                <a href="..." class="portfolio__item">
+                    <img src="" alt="">
+
                 </a>
             </div>
 
             <div class="portfoli">
-                <a href="a" class="portfolio__item">
-                    <img src="">
+                <a href="..." class="portfolio__item">
+                    <img src="" alt="">
+
                 </a>
             </div>
 
             <div class="portfoli">
-                <a href="a" class="portfolio__item">
-                    <img src="">
+                <a href="..." class="portfolio__item">
+                    <img src="" alt="">
+
                 </a>
             </div>
         </section>
