Added JS and some functions

--- a/index.html
+++ b/index.html
@@ -124,5 +124,6 @@
                 <li class="social-list__item"><a class="social-list__link">Instagram</a></li>
             </ul>
         </footer>
+        <script src="js/index.js"></script>
     </body>
 </html>
